@@ -1,3 +1,5 @@
-EBUILD clementine-9999.ebuild 3304 RMD160 e0b70d7630482bf7e48cd68faf3977025ab05959 SHA1 a46a5424c431b28233a4642a28668505382fa7d4 SHA256 7876363626ca289c901c47325f5296335893b53db76213d6a670ba3fabed1bd1
-MISC ChangeLog 4240 RMD160 94e4711b982d3d635a53d23025d8d3468633df56 SHA1 5953edc02e426cb3f0be672853e06bd948e3bdc7 SHA256 232cd449e5f66390d1e2492f921e8f6bd6f3fc79849843f177910f8be6e6b845
-MISC metadata.xml 860 RMD160 9bf145eb6ccdebbe098fdd7f69631cdf2148c0a4 SHA1 a5049821d75d8b47e7981c6f1f3328f4cb5b0f60 SHA256 ed10a862917ee585bb65484d11670d9fb9eaebff01d7ee9189bef68e636473e9
+DIST clementine-1.0.0rc1.tar.gz 8205324 RMD160 12d027b72189345d1cea1d5d8e5032b0ba940451 SHA1 ca09b5a7f1ac7207daedfb68d340e37ef65f81c5 SHA256 ef3bba78c8f304bf615fceb29c174bb644a0b2895f8555132dd33ce9ef3a2c3a
+EBUILD clementine-1.0.0_rc1.ebuild 3746 RMD160 a77b8eb4a01907dd410a9d6d9b0818317debb78e SHA1 b9c653255d266f9953a6aae47960285729e0a327 SHA256 70ff65d574d5624795fd96d0ebbc3f5a2c1cbd566b1357b07c4ed2b77faa6cae
+EBUILD clementine-9999.ebuild 3695 RMD160 2830e7b5de6389249918ed7abaaa1e49ff6631dd SHA1 f84c5afe07b5bbaa18b54867ea52a356575f502b SHA256 84be3caa079a86cd78cdd989f70cc4fa06412bf2c47f0231049b90f071d28a6c
+MISC ChangeLog 4452 RMD160 b2793cff6b6d7a283ca2f9bd58d7aab0152fdc42 SHA1 fa614982fdb03a2ea11f0252349dad7aa85e56fd SHA256 7ca6209c133474ab30ee1fd21c08602cea78334cf4fc6f5c17b36d58b2169c47
+MISC metadata.xml 924 RMD160 e57b4eb542a62d47ab4747c0542db29a9c5b08bc SHA1 0cd0ae541f2ac4483165db93581decb1b42ff669 SHA256 6d7cf7d0e2837935ab904b56339c14f25023c7628020bcdbf5ee93b04b1d398f
