@@ -9,6 +9,7 @@
   <use>
     <flag name="ayatana">Build in support for Ayatana notification using the libindicate-qt plugin.</flag>
     <flag name="ios">Enable support for iPod Touch, iPhone, iPad</flag>
+    <flag name="kde">Enable plasma krunner global search</flag>
     <flag name="lastfm">Use liblastfm for fetching song info, scrobbling and radio streams</flag>
     <flag name="mms">Enable mms support</flag>
     <flag name="ofa">Support for Open Fingerprint Architecture (OFA)</flag>
