@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*clementine-1.0.0_rc1 (04 Dec 2011)
+
+  04 Dec 2011; Nikoli <nikoli@lavabit.com> +clementine-1.0.0_rc1.ebuild,
+  clementine-9999.ebuild, metadata.xml:
+  version bump, add cdda and kde use flags, use system gmock
+
   03 Aug 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild,
   metadata.xml:
   upstream removed scripting, fix deps for USE remote
